cmake_minimum_required (VERSION 2.6) 
project (Tutorial) 
# 版本号 
set (Tutorial_VERSION_MAJOR 1) 
set (Tutorial_VERSION_MINOR 0) 
# 配置一个头文件，通过它向源代码中传递一些 CMake 设置。 
configure_file ( 
"${PROJECT_SOURCE_DIR}/TutorialConfig.h.in"
"${PROJECT_BINARY_DIR}/TutorialConfig.h"
) 
# 将二进制文件树添加到包含文件的搜索路径中，这样我们可以找到include_directories
#添加可执行文件
    add_executable(Tutorial tutorial.cxx)
include_directories("${PROJECT_BINARY_DIR}")
#添加可执行文件
    add_executable(Tutorial tutorial.cxx)
